# covid-mask-detector

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
covid-mask-detector/: data_preparation.py  dataset.py  train.py  video.py
covid-mask-detector/common/: facedetector.py
covid-mask-detector/data/: .gitignore
covid-mask-detector/tensorboard/: .gitignore
