[tool.poetry]
name = "covid-mask-detector"
version = "0.9.0"
description = "Detect whether a face is wearing a mask or not!"
authors = ["Jad Haddad <jad.haddad92@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
googledrivedownloader = "^0.4"
opencv-python = "^4.5.2"
pandas = "^1.2.4"
pytorch-lightning = "^1.3.5"
scikit-learn = "^1.2.0"
scikit-video = "^1.1.11"
torch = "^1.8.1"
torchvision = "^0.10.0"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
